<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/bg_card_view_home"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTabFooter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:clickable="true">
            <LinearLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:weightSum="4"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:id="@+id/tabHome"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:button="@null"
                        android:id="@+id/btnHome"
                        android:clickable="false"
                        android:layout_width="@dimen/_14sdp"
                        android:layout_height="@dimen/_14sdp"
                        android:backgroundTint="@color/white"
                        android:background="@drawable/ic_tab_home_selector" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:text="@string/str_tab_home"
                        android:textSize="@dimen/_9sdp"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:id="@+id/tabCustom"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:button="@null"
                        android:id="@+id/btnCustom"
                        android:clickable="false"
                        android:layout_width="@dimen/_14sdp"
                        android:layout_height="@dimen/_14sdp"
                        android:backgroundTint="@color/white"
                        android:background="@drawable/ic_tab_custom_selector" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:text="@string/str_tab_custom"
                        android:textSize="@dimen/_9sdp"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:id="@+id/tabMarketing"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:button="@null"
                        android:id="@+id/btnMarketing"
                        android:clickable="false"
                        android:layout_width="@dimen/_14sdp"
                        android:layout_height="@dimen/_14sdp"
                        android:backgroundTint="@color/white"
                        android:background="@drawable/ic_tab_marketing_selector" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:text="@string/str_tab_marketing"
                        android:textSize="@dimen/_9sdp"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:id="@+id/tabPersonal"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:button="@null"
                        android:id="@+id/btnPersonal"
                        android:clickable="false"
                        android:layout_width="@dimen/_14sdp"
                        android:layout_height="@dimen/_14sdp"
                        android:backgroundTint="@color/white"
                        android:background="@drawable/ic_tab_personal_selector" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:text="@string/str_tab_custom"
                        android:textSize="@dimen/_9sdp"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>



            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>