<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="item"
            type="com.vinatti.datasales.data.api_entities.response.ResponseMarketing.MarketingResponse" />

        <variable
            name="viewModel"
            type="com.vinatti.datasales.viewmodel.MarketingDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F5F5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/str_title_marketing_detail"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/layout_header">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Từ ngày"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_from_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start|center"
                android:text="@{item.fromDate}"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toStartOf="@id/img_arr_from_date"
                app:layout_constraintStart_toEndOf="@id/gl3"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_arr_from_date"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_arrow_right"
                android:tint="@color/grey_600"
                app:layout_constraintBottom_toBottomOf="@id/tv_name_from_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_name_from_date" />

            <View
                android:id="@+id/viewLine1"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/grey_300"
                app:layout_constraintTop_toBottomOf="@id/tv_from_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Đến ngày"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLine1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_to_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start|center"
                android:text="@{item.toDate}"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toStartOf="@id/img_arr_to_date"
                app:layout_constraintStart_toEndOf="@id/gl3"
                app:layout_constraintTop_toBottomOf="@id/viewLine1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_arr_to_date"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_arrow_right"
                android:tint="@color/grey_600"
                app:layout_constraintBottom_toBottomOf="@id/tv_name_to_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_name_to_date" />

            <View
                android:id="@+id/viewLine2"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/grey_300"
                app:layout_constraintTop_toBottomOf="@id/tv_name_to_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="Kênh"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLine2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_channel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start|center"
                android:text="@{viewModel.contentChannel}"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toStartOf="@id/img_arr_channel"
                app:layout_constraintStart_toEndOf="@id/gl3"
                app:layout_constraintTop_toBottomOf="@id/viewLine2" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_arr_channel"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_arrow_right"
                android:tint="@color/grey_600"
                app:layout_constraintBottom_toBottomOf="@id/tv_name_channel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_name_channel" />

            <View
                android:id="@+id/viewLine3"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/grey_300"
                app:layout_constraintTop_toBottomOf="@id/tv_name_channel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="Chi phí"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="@id/edt_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/edt_price" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_price"
                android:hint="@string/str_hint_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@null"
                android:gravity="end"
                android:maxLines="1"
                android:minWidth="@dimen/_40sdp"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLine3"
                app:textPrice="@{item.cost}" />

            <View
                android:id="@+id/viewLine4"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/grey_300"
                app:layout_constraintTop_toBottomOf="@id/edt_price" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_sum_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="Tổng tiền chi"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="@id/edt_sum_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/edt_sum_amount" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_sum_amount"
                android:hint="@string/str_hint_sum_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@null"
                android:gravity="end"
                android:maxLines="1"
                android:minWidth="@dimen/_40sdp"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLine4"
                app:textPrice="@{item.totalAmount}" />

            <View
                android:id="@+id/viewLine5"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/grey_300"
                app:layout_constraintTop_toBottomOf="@id/edt_sum_amount" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:text="Số lượng\nkhách hàng"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLine5" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_count_custom"
                android:hint="@string/str_hint_count_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@null"
                android:gravity="end"
                android:inputType="number"
                android:maxLines="1"
                android:minWidth="@dimen/_40sdp"
                android:singleLine="true"
                android:text="@{item.quantity+``}"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="@id/tv_name_custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_name_custom" />

            <View
                android:id="@+id/viewLine6"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/grey_300"
                app:layout_constraintTop_toBottomOf="@id/tv_name_custom" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@color/colorPrimary"
            android:text="Cập nhật"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>